// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render with 1 expenses 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $0.23
    .
  </h1>
</div>
`;

exports[`Should render with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $233.33
    .
  </h1>
</div>
`;
